[package]
name = "mysolanaapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "mysolanaapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
mpl-token-metadata  = { version="^1.2.10", features = [ "no-entrypoint" ] }

solana-gateway = "0.2.2"
arrayref = "0.3.6"
anchor-spl = "0.20.1"
spl-associated-token-account = "1.0.3"
solana-program = "~1.9.15"

spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }